# pypi_readme

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/: py.typed
